# agent-devtools-mcp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_SPECIFICATION.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  deployment.md  security.md
examples/: claude_desktop_config.json
integration_tests/: conftest.py  test_integration.py
